--- a/dailyNews/Starter/assets/css/main.css
+++ b/dailyNews/Starter/assets/css/main.css
@@ -556,7 +556,17 @@ body.light-theme{
     transform: scale(1.05);
 }
 /* Newsletter */
+.newsletter{
+    padding-bottom: 6rem;
+}
 
+.newsletter-title{
+    font-size: var(--font-size-lg);
+}
+
+.newsletter-description{
+    margin-bottom: 3rem;
+}
 /* Footer */
 
 /* Scrollbar styles */
