--- a/dailyNews/Starter/assets/css/main.css
+++ b/dailyNews/Starter/assets/css/main.css
@@ -606,7 +606,21 @@ body.light-theme{
     margin-bottom: var(--margin-sm);
 }
 /* Scrollbar styles */
+::-webkit-scrollbar{
+    width: 1rem;
+}
 
+::-webkit-scrollbar-track{
+    background-color: #f1f1f1;
+}
+
+::-webkit-scrollbar-thumb{
+    background-color: #3f4254;
+}
+
+::-webkit-scrollbar-thumb:hover{
+    background-color: #2e303b;
+}
 /* Blog post */
 
 /* Media queries */
